--- a/index.html
+++ b/index.html
@@ -4,27 +4,310 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INT's</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    >
+      const myCarouselElement = document.querySelector('#myCarousel')
+
+      const carousel = new bootstrap.Carousel(myCarouselElement, {
+        interval: 2000,
+        touch: false
+      })
+    </script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
       body {
         margin: 0;
       }
 
-      #header {
+      .header {
         background-color: #e1e5b6;
-        height: 200px;
+        height: 100px;
         align-items: center;
         justify-content: center;
         display: flex;
       }
-      #header > h1 {
+      .header > div {
         color: #426b1f;
         font-family: "Newsreader", serif;
-        font-size: xxx-large;
+        font-size: 3rem;
+      }
+
+      .main {
+        display: flex;
+        flex-direction: column;
+      }
+      #myCarousel {
+        width: 100%;
+        height: 512px;
+      }
+
+      .carousel-caption {
+        top: 1.5rem;
+      }
+      .carousel-caption > h1 {
+        margin-bottom: 3rem;
+      }
+
+      #rows-container {
+        display: flex;
+        align-items: center;
+        height: 600px;
+      }
+
+      .row {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .col-lg-3 {
+        text-align: center;
+        border-style: solid;
+        border-width: 1.5px;
+        border-radius: 5px;
+        padding: 2rem 0.5rem;
+        width: 24%;
+      }
+
+      .fw-normal {
+        margin-top: 2rem;
       }
     </style>
   </head>
   <body>
-    <div id="header"><h1>INT's</h1></div>
+    <div class="header"><div>INT's</div></div>
+    <div class="main">
+      <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#myCarousel"
+            data-bs-slide-to="0"
+            class="active"
+            aria-label="Slide 1"
+            aria-current="true"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#myCarousel"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+            class=""
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#myCarousel"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+            class=""
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <svg
+              class="bd-placeholder-img"
+              width="100%"
+              height="512px"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <rect width="100%" height="100%" fill="#a7acb1"></rect>
+            </svg>
+            <div class="container">
+              <div class="carousel-caption text-start">
+                <h1>팀 소개</h1>
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  mattis fringilla commodo. Donec at magna in lorem vehicula
+                  tempus ullamcorper id leo.
+                </h3>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <svg
+              class="bd-placeholder-img"
+              width="100%"
+              height="512px"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <rect width="100%" height="100%" fill="#a7acb1"></rect>
+            </svg>
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>팀 목표</h1>
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  mattis fringilla commodo. Donec at magna in lorem vehicula
+                  tempus ullamcorper id leo.
+                </h3>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <svg
+              class="bd-placeholder-img"
+              width="100%"
+              height="512px"
+              xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <rect width="100%" height="100%" fill="#a7acb1"></rect>
+            </svg>
+            <div class="container">
+              <div class="carousel-caption text-end">
+                <h1>팀 시간 약속</h1>
+                <h3>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
+                  mattis fringilla commodo. Donec at magna in lorem vehicula
+                  tempus ullamcorper id leo.
+                </h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#myCarousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="container" id="rows-container">
+        <div class="row">
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal">김태완</h2>
+            <p>
+              Some representative placeholder content for the three columns of
+              text below the carousel. This is the first column.
+            </p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal">오지석</h2>
+            <p>
+              Another exciting bit of representative placeholder content. This
+              time, we've moved on to the second column.
+            </p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal">김도균</h2>
+            <p>
+              And lastly this, the third column of representative placeholder
+              content.
+            </p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          </div>
+          <!-- /.col-lg-3 -->
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal">이수진</h2>
+            <p>
+              And lastly this, the third column of representative placeholder
+              content.
+            </p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
