--- a/index.html
+++ b/index.html
@@ -15,15 +15,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
-    >
-      const myCarouselElement = document.querySelector('#myCarousel')
-
-      // 자동으로 돌아가는 부분
-      // const carousel = new bootstrap.Carousel(myCarouselElement, {
-      //   interval: 2000,
-      //   touch: false
-      // })
-    </script>
+    ></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
       body {
@@ -60,15 +52,10 @@
         margin-bottom: 3rem;
       }
 
-      #rows-container {
-        display: flex;
-        align-items: center;
-        height: 600px;
-      }
-
       .row {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
       }
 
       .col-lg-3 {
@@ -77,7 +64,8 @@
         border-width: 1.5px;
         border-radius: 5px;
         padding: 2rem 0.5rem;
-        width: 24%;
+        margin: 10px;
+        width: 90%;
       }
 
       .fw-normal {
@@ -88,7 +76,7 @@
   <body>
     <div class="header"><div>INT's</div></div>
     <div class="main">
-      <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+      <div id="myCarousel" class="carousel slide mb-6">
         <div class="carousel-indicators">
           <button
             type="button"
@@ -302,6 +290,31 @@
               ></rect>
             </svg>
             <h2 class="fw-normal">이수진</h2>
+            <p>
+              And lastly this, the third column of representative placeholder
+              content.
+            </p>
+            <p><a class="btn btn-secondary" href="#">View details »</a></p>
+          </div>
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal">추가</h2>
             <p>
               And lastly this, the third column of representative placeholder
               content.
