--- a/detail/index.html
+++ b/detail/index.html
@@ -31,7 +31,7 @@
 
       .header {
         padding-top: 10px;
-        background-color: #b7ffb2;
+        background-color: #ffffff;
         height: 100px;
         align-items: center;
         justify-content: center;
@@ -61,7 +61,8 @@
 
       #rows-container {
         display: flex;
-        align-items: center;
+        align-items: flex-start;
+        padding-top: 50px;
         height: 600px;
       }
 
@@ -89,6 +90,8 @@
         height: 500px;
         padding: 80px;
         background-color: rgb(255, 253, 231);
+        border-style: solid;
+        border-width: 1.5px;
       }
 
       .update{
@@ -96,6 +99,7 @@
         margin: 0 auto;
         display: flex;
         align-items: end;
+        
         justify-content: end;
       }
 
@@ -115,7 +119,7 @@
       <div class="card mb-3 detail">
         <div class="row g-0">
           <div class="col-md-4">
-            <img src="https://postfiles.pstatic.net/20130820_270/tkdgus830416_1376927752539W7lfj_JPEG/23.jpg?type=w1" width="300" height="300" class="img-fluid rounded-start" alt="...">
+            <img src="https://postfiles.pstatic.net/20130820_270/tkdgus830416_1376927752539W7lfj_JPEG/23.jpg?type=w1" width="300" height="350" class="img-fluid rounded-start" alt="...">
           </div>
           <div class="col-md-8">
             <div class="card-body">
