--- a/detail/index.html
+++ b/detail/index.html
@@ -1,237 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INT's</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"
-    >
-      const myCarouselElement = document.querySelector('#myCarousel')
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+            const myCarouselElement = document.querySelector('#myCarousel')
 
-      const carousel = new bootstrap.Carousel(myCarouselElement, {
-        interval: 2000,
-        touch: false
-      })
-    </script>
+            const carousel = new bootstrap.Carousel(myCarouselElement, {
+                interval: 2000,
+                touch: false
+            })
+        </script>
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
-      body {
-        margin: 0;
-      }
+        @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
 
-      .header {
-        padding-top: 10px;
-        background-color: #ffffff;
-        height: 100px;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-      }
-      .header > div {
-        color: #000000;
-        font-family: "Newsreader", serif;
-        font-size: 3rem;
-      }
+        body {
+            margin: 0;
+        }
 
-      .main {
-        display: flex;
-        flex-direction: column;
-      }
-      #myCarousel {
-        width: 100%;
-        height: 512px;
-      }
+        .header {
+            padding-top: 10px;
+            background-color: #ffffff;
+            height: 100px;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+        }
 
-      .carousel-caption {
-        top: 1.5rem;
-      }
-      .carousel-caption > h1 {
-        margin-bottom: 3rem;
-      }
+        .header>div {
+            color: #000000;
+            font-family: "Newsreader", serif;
+            font-size: 3rem;
+        }
 
-      #rows-container {
-        display: flex;
-        align-items: flex-start;
-        padding-top: 50px;
-        height: 600px;
-      }
+        .main {
+            display: flex;
+            flex-direction: column;
+        }
 
-      .row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
+        #myCarousel {
+            width: 100%;
+            height: 512px;
+        }
 
-      .col-lg-3 {
-        text-align: center;
-        border-style: solid;
-        border-width: 1.5px;
-        border-radius: 5px;
-        padding: 2rem 0.5rem;
-        width: 24%;
-      }
+        .carousel-caption {
+            top: 1.5rem;
+        }
 
-      .fw-normal {
-        margin-top: 2rem;
-      }
-      .detail{
-        margin: 25px auto 0 auto;
-        width: 1330px;
-        height: 500px;
-        padding: 80px;
-        background-color: rgb(255, 253, 231);
-        border-style: solid;
-        border-width: 1.5px;
-      }
+        .carousel-caption>h1 {
+            margin-bottom: 3rem;
+        }
 
-      .update{
-        width: 1330px;
-        margin: 0 auto;
-        display: flex;
-        align-items: end;
-        
-        justify-content: end;
-      }
+        #rows-container {
+            display: flex;
+            align-items: flex-start;
+            padding-top: 50px;
+            height: 600px;
+        }
 
-      .card {
-        justify-content: center;
-      }
-      #a {
-    color: #000;
-    text-decoration: none;
-      }
+        .row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
 
+        .col-lg-3 {
+            text-align: center;
+            border-style: solid;
+            border-width: 1.5px;
+            border-radius: 5px;
+            padding: 2rem 0.5rem;
+            width: 24%;
+        }
+
+        .fw-normal {
+            margin-top: 2rem;
+        }
+
+        .detail {
+            margin: 25px auto 0 auto;
+            width: 1330px;
+            height: 500px;
+            padding: 80px;
+            background-color: rgb(255, 253, 231);
+            border-style: solid;
+            border-width: 1.5px;
+        }
+
+        .update {
+            width: 1330px;
+            margin: 0 auto;
+            display: flex;
+            align-items: end;
+
+            justify-content: end;
+        }
+
+        .card {
+            justify-content: center;
+        }
+
+        #a {
+            color: #000;
+            text-decoration: none;
+        }
+
+        .bar {
+width: auto;
+height: 30px;
+        background-color: green;
+        }
     </style>
-  </head>
-  <body>
-    <div class="header"><div>INT's</div></div>
-    <div class="main">
-      <div class="card mb-3 detail">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="https://postfiles.pstatic.net/20130820_270/tkdgus830416_1376927752539W7lfj_JPEG/23.jpg?type=w1" width="300" height="350" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-                <hr>
-              <h3 class="card-title">김도균</h3>
-              <hr>
-              <h5 class="card-text"> MBTI : </h5>
-              <hr>
-              <p class="card-text">나만의 장점 : </p>
-              <hr>
-              <p class="card-text">자신의 스타일 : </p>
-              <hr>
-              <a id="a" class="card-text">블로그 : </a>
-              <hr>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="update">
-        <button type="button" class="btn btn-danger">Update</button>
-      </div>
-      <div class="container" id="rows-container">
-        <div class="row" style="width: 1500px">
-          <div class="col-lg-3">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              ></rect>
-            </svg>
-            <h2 class="fw-normal">김태완</h2>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
-          </div>
-          <!-- /.col-lg-3 -->
-          <div class="col-lg-3">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              ></rect>
-            </svg>
-            <h2 class="fw-normal">오지석</h2>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
-          </div>
-          <!-- /.col-lg-3 -->
-          <div class="col-lg-3">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              ></rect>
-            </svg>
-            <h2 class="fw-normal">김도균</h2>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
-          </div>
-          <!-- /.col-lg-3 -->
-          <div class="col-lg-3">
-            <svg
-              class="bd-placeholder-img rounded-circle"
-              width="140"
-              height="140"
-              xmlns="http://www.w3.org/2000/svg"
-              role="img"
-              aria-label="Placeholder"
-              preserveAspectRatio="xMidYMid slice"
-              focusable="false"
-            >
-              <title>Placeholder</title>
-              <rect
-                width="100%"
-                height="100%"
-                fill="var(--bs-secondary-color)"
-              ></rect>
-            </svg>
-            <h2 class="fw-normal">이수진</h2>
-            <p><a class="btn btn-secondary" href="#">View details »</a></p>
-          </div>
-        </div>
-      </div>
+</head>
+
+<body>
+    <div class="header">
+        <div>INT's</div>
     </div>
-  </body>
+    <div class="bar"> <span></span></div>
+    <div class="main">
+        <div class="card mb-3 detail">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="https://postfiles.pstatic.net/20130820_270/tkdgus830416_1376927752539W7lfj_JPEG/23.jpg?type=w1"
+                        width="300" height="350" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <hr>
+                        <h3 class="card-title">김도균</h3>
+                        <hr>
+                        <h5 class="card-text"> MBTI : </h5>
+                        <hr>
+                        <p class="card-text">나만의 장점 : </p>
+                        <hr>
+                        <p class="card-text">자신의 스타일 : </p>
+                        <hr>
+                        <a id="a" class="card-text">블로그 : </a>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="update">
+            <button type="button" class="btn btn-danger">Update</button>
+        </div>
+        <div class="container" id="rows-container">
+            <div class="row" style="width: 1500px">
+                <div class="col-lg-3">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                    </svg>
+                    <h2 class="fw-normal">김태완</h2>
+                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div>
+                <!-- /.col-lg-3 -->
+                <div class="col-lg-3">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                    </svg>
+                    <h2 class="fw-normal">오지석</h2>
+                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div>
+                <!-- /.col-lg-3 -->
+                <div class="col-lg-3">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                    </svg>
+                    <h2 class="fw-normal">김도균</h2>
+                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div>
+                <!-- /.col-lg-3 -->
+                <div class="col-lg-3">
+                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
+                        xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
+                        preserveAspectRatio="xMidYMid slice" focusable="false">
+                        <title>Placeholder</title>
+                        <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+                    </svg>
+                    <h2 class="fw-normal">이수진</h2>
+                    <p><a class="btn btn-secondary" href="#">View details »</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
