--- a/detail/index.html
+++ b/detail/index.html
@@ -112,9 +112,9 @@
         }
 
         .bar {
-width: auto;
-height: 30px;
-        background-color: green;
+            width: auto;
+            height: 20px;
+            background-color: green;
         }
     </style>
 </head>
@@ -128,21 +128,21 @@ height: 30px;
         <div class="card mb-3 detail">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img src="https://postfiles.pstatic.net/20130820_270/tkdgus830416_1376927752539W7lfj_JPEG/23.jpg?type=w1"
+                    <img src="https://postfiles.pstatic.net/MjAyNDA0MTZfNzgg/MDAxNzEzMjU3MDA1Mjcw.RRJD3mrFPYCIPizm_hbXKBzeGJMBCKpin9MzDZWwmz8g.mG5Gt9mTMyIpRnrkhU7sltZ6sUT-ZzlYTPuZcULWN4Ug.JPEG/KakaoTalk_20240416_174058966dd.jpg?type=w966"
                         width="300" height="350" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
                         <hr>
-                        <h3 class="card-title">김도균</h3>
+                        <h3 class="card-title">김태완</h3>
                         <hr>
-                        <h5 class="card-text"> MBTI : </h5>
+                        <h5 class="card-text"> MBTI : INTJ</h5>
                         <hr>
-                        <p class="card-text">나만의 장점 : </p>
+                        <p class="card-text">나만의 장점 : 남의 말에 휘둘리지 않는 자존감</p>
                         <hr>
-                        <p class="card-text">자신의 스타일 : </p>
+                        <p class="card-text">자신의 스타일 : 깔끔하고 심플한 것을 선호</p>
                         <hr>
-                        <a id="a" class="card-text">블로그 : </a>
+                        <p class="card-text">블로그 : <a id="a" class="card-text" href="https://blog.naver.com/kangbaekho10s" target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
                         <hr>
                     </div>
                 </div>
