--- a/detail.html
+++ b/detail.html
@@ -25,9 +25,10 @@
         }
 
         .header {
-            padding-top: 10px;
+            padding-top: 40px;
+            padding-left: 3px;
             background-color: #ffffff;
-            height: 130px;
+            height: 90px;
             align-items: center;
             justify-content: center;
             display: flex;
@@ -112,9 +113,12 @@
         }
 
         .bar {
-            width: auto;
-            height: 20px;
-            background-color: green;
+            width: 210px;
+            height: 5px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: 20px;
+            background-color: black;
         }
     </style>
 </head>
@@ -123,7 +127,7 @@
     <div class="header">
         <div>INT's</div>
     </div>
-    <div class="bar"> <span></span></div>
+    <div class="bar"></div>
     <div class="main">
         <div class="card mb-3 detail">
             <div class="row g-0">
@@ -142,7 +146,9 @@
                         <hr>
                         <p class="card-text">자신의 스타일 : 깔끔하고 심플한 것을 선호</p>
                         <hr>
-                        <p class="card-text">블로그 : <a id="a" class="card-text" href="https://blog.naver.com/kangbaekho10s" target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
+                        <p class="card-text">블로그 : <a id="a" class="card-text"
+                                href="https://blog.naver.com/kangbaekho10s"
+                                target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
                         <hr>
                     </div>
                 </div>
