--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         collection,
         getDocs,
         getFirestore,
+        addDoc,
       } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
       const firebaseConfig = {
@@ -109,8 +110,8 @@
       const cnt =
         document.getElementsByClassName("row")[0].childElementCount - 1;
       for (let i = 1; i <= cnt; i++) {
-          const detail_btn = document.querySelector("#detail-btn-" + i);
-          const name = document.querySelector("#card-" + i).innerText;
+        const detail_btn = document.querySelector("#detail-btn-" + i);
+        const name = document.querySelector("#card-" + i).innerText;
 
         detail_btn.onclick = () => {
           let current_href = window.location.href;
@@ -121,9 +122,25 @@
               name;
           } else {
             window.location = current_href + "detail.html?name=" + name;
-        }
-      };
+          }
+        };
       }
+
+      async function addCard() {
+        const name = document.querySelector("input[id=name]").value;
+        const mbti = document.querySelector("input[id=mbti]").value;
+        const strength = document.querySelector("input[id=strength]").value;
+        const style = document.querySelector("input[id=style]").value;
+        const blog = document.querySelector("input[id=blog]").value;
+        const image = document.querySelector("input[id=image]").value;
+
+        const doc = { name, mbti, strength, style, blog, image };
+        console.log(JSON.stringify(doc));
+        await addDoc(collection(db, "cards"), doc);
+        document.querySelector("#close-btn").click();
+      }
+
+      document.querySelector("#add-btn").onclick = addCard;
     </script>
   </head>
   <body>
@@ -376,11 +393,15 @@
               ></rect>
             </svg>
             <h2 class="fw-normal" id="card-5">추가</h2>
+            <p>새 멤버를 추가하세요.</p>
             <p>
-              새 멤버를 추가하세요.
-            </p>
-            <p>
-              <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#addModal">멤버 추가하기 »</button>
+              <button
+                class="btn btn-secondary"
+                data-bs-toggle="modal"
+                data-bs-target="#addModal"
+              >
+                멤버 추가하기 »
+              </button>
             </p>
           </div>
         </div>
@@ -388,50 +409,107 @@
     </div>
 
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
+    <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">
       Launch demo modal
-    </button>
+    </button> -->
 
     <!-- Modal -->
-    <div class="modal fade" id="addModal" tabindex="-1" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div
+      class="modal fade"
+      id="addModal"
+      tabindex="-1"
+      aria-labelledby="addModalLabel"
+      aria-hidden="true"
+    >
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">새 멤버 추가</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              새 멤버 추가
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
             <div class="input-group mb-3">
-              <span class="input-group-text" id="name">이름</span>
-              <input type="text" class="form-control" aria-label="name" aria-describedby="name">
+              <span class="input-group-text">이름</span>
+              <input
+                id="name"
+                type="text"
+                class="form-control"
+                aria-label="name"
+                aria-describedby="name"
+              />
             </div>
             <div class="input-group mb-3">
-              <span class="input-group-text" id="mbti">MBTI</span>
-              <input type="text" class="form-control" aria-label="mbti" aria-describedby="mbti">
+              <span class="input-group-text">MBTI</span>
+              <input
+                id="mbti"
+                type="text"
+                class="form-control"
+                aria-label="mbti"
+                aria-describedby="mbti"
+              />
             </div>
             <div class="input-group mb-3">
-              <span class="input-group-text" id="strength">장점</span>
-              <input type="text" class="form-control" aria-label="strength" aria-describedby="strength">
+              <span class="input-group-text">장점</span>
+              <input
+                id="strength"
+                type="text"
+                class="form-control"
+                aria-label="strength"
+                aria-describedby="strength"
+              />
             </div>
             <div class="input-group mb-3">
-              <span class="input-group-text" id="style">스타일</span>
-              <input type="text" class="form-control" aria-label="style" aria-describedby="style">
+              <span class="input-group-text">스타일</span>
+              <input
+                id="style"
+                type="text"
+                class="form-control"
+                aria-label="style"
+                aria-describedby="style"
+              />
             </div>
             <div class="input-group mb-3">
-              <span class="input-group-text" id="blog">블로그 주소</span>
-              <input type="text" class="form-control" aria-label="blog" aria-describedby="blog">
+              <span class="input-group-text">블로그 주소</span>
+              <input
+                id="blog"
+                type="text"
+                class="form-control"
+                aria-label="blog"
+                aria-describedby="blog"
+              />
             </div>
 
             <!--파일 업로드로 수정하는게 좋을것 같음-->
             <div class="input-group mb-3">
-              <span class="input-group-text" id="image">이미지 주소</span>
-              <input type="text" class="form-control" aria-label="image" aria-describedby="image">
+              <span class="input-group-text">이미지 주소</span>
+              <input
+                id="image"
+                type="text"
+                class="form-control"
+                aria-label="image"
+                aria-describedby="image"
+              />
             </div>
-
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
-            <button type="button" class="btn btn-primary">추가하기</button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+              id="close-btn"
+            >
+              닫기
+            </button>
+            <button type="button" class="btn btn-primary" id="add-btn">
+              추가하기
+            </button>
           </div>
         </div>
       </div>
