--- a/detail.html
+++ b/detail.html
@@ -97,7 +97,6 @@
     }
 
     .update {
-      width: 1330px;
       margin: 0 auto;
       display: flex;
       align-items: end;
@@ -123,11 +122,15 @@
       background-color: black;
     }
     .update-modal{
+      width: 1300px;
+      margin:0 auto;
       box-shadow: 0 0 10px 0 gray;
       background-color: rgb(250, 247, 198);
       transition: all 1s;
       opacity: 0;
       position: absolute;
+      pointer-events: none;
+      z-index: 1;
     }
 
     .update-modal-content hr{
@@ -163,21 +166,25 @@
     }
   </style>
   <script type="module">
-    // import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    // import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+    // Firebase SDK 라이브러리 가져오기
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
-    // const firebaseConfig = {
-    //   apiKey: "AIzaSyDGlZ9TyVxuuYWasHQDLbxdgsVu8OO1FQc",
-    //   authDomain: "int-s-72dee.firebaseapp.com",
-    //   projectId: "int-s-72dee",
-    //   storageBucket: "int-s-72dee.appspot.com",
-    //   messagingSenderId: "684881337775",
-    //   appId: "1:684881337775:web:3aff3805fe1a0f8a14e35a",
-    //   measurementId: "G-5ESFPJV4BJ"
-    // };
 
-    // const app = initializeApp(firebaseConfig);
-    // const db = getFirestore(app);
+    // Firebase 구성 정보 설정
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyDGlZ9TyVxuuYWasHQDLbxdgsVu8OO1FQc",
+      authDomain: "int-s-72dee.firebaseapp.com",
+      projectId: "int-s-72dee",
+      storageBucket: "int-s-72dee.appspot.com",
+      messagingSenderId: "684881337775",
+      appId: "1:684881337775:web:3aff3805fe1a0f8a14e35a",
+      measurementId: "G-5ESFPJV4BJ"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
     $("#save").click(async function () {
       // let image = $('#image').val()
@@ -196,14 +203,17 @@
     })
 
     let isModal = false
+    let updateModal = $("#update_modal")
 
     $("#update").click(async function (){
-      if(isModal === false){
+      if(!isModal){
         isModal = true
-        $("#update_modal").css("opacity", 1)
+        updateModal.css("opacity", 1)
+        updateModal.css("pointer-events", "auto")
       }else{
         isModal = false
-        $("#update_modal").css("opacity", 0)
+        updateModal.css("opacity", 0)
+        updateModal.css("pointer-events", "none")
       }
     })
 
@@ -246,11 +256,14 @@
                                         href="https://blog.naver.com/kangbaekho10s"
                                         target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
           <hr>
+          <div class="update">
+            <button type="button" class="btn btn-danger" id="update">수정하기</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="card mb-3 detail update-modal" id="update_modal" style="margin-left: 525px">
+  <div class="card mb-3 detail update-modal" id="update_modal" style="margin-left: 540px">
     <div class="row g-0">
       <div class="col-md-8">
         <div class="card-body update-modal-content">
@@ -269,14 +282,12 @@
           <hr>
         </div>
         <div class="update-modal-content-button">
-          <button type="button" class="btn btn-danger" id="save">Save</button>
+          <button type="button" class="btn btn-danger" id="save">저장하기</button>
         </div>
       </div>
     </div>
   </div>
-  <div class="update">
-    <button type="button" class="btn btn-danger" id="update">Update</button>
-  </div>
+
   <div class="container" id="rows-container">
     <div class="row" style="width: 1500px">
       <div class="col-lg-3">
