--- a/detail.html
+++ b/detail.html
@@ -224,6 +224,7 @@
       }else{
         isModal = false
         $("#update_modal").css("opacity", 0)
+        updateModal.css("pointer-events", "none")
       }
     })
   </script>
