--- a/detail.html
+++ b/detail.html
@@ -277,7 +277,7 @@
           <hr>
           <p class="card-text">자신의 스타일 : <input type="text" placeholder="스타일"></p>
           <hr>
-          <p class="card-text">블로그 : <input type="text" placeholder="스타일"></p>
+          <p class="card-text">블로그 : <input type="text" placeholder="블로그 주소"></p>
           <hr>
           <p class="card-text">이미지 : <input type="text" placeholder="이미지 주소"></p>
           <hr>
