--- a/detail.html
+++ b/detail.html
@@ -128,7 +128,7 @@
       background-color: rgb(250, 247, 198);
       transition: all 1s;
       opacity: 0;
-      position: absolute;
+      position: fixed;
       pointer-events: none;
       z-index: 1;
     }
@@ -164,27 +164,45 @@
     #update_modal {
       grid-row: 1;
     }
+
+    .update input{
+      margin-right: 20px;
+      height: 35px;
+    }
   </style>
   <script type="module">
-    // Firebase SDK 라이브러리 가져오기
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
+    import {
+      collection,
+      getDocs,
+      getFirestore,
+      addDoc,
+      query,
+      where,
+    } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+    let current_href = window.location.href;
+    let href = current_href.split("/").slice(-1)[0]
+    let newHref = href.split("=")
+    let params = decodeURIComponent(newHref[1])
 
 
-    // Firebase 구성 정보 설정
-    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+
+
+
     const firebaseConfig = {
-      apiKey: "AIzaSyDGlZ9TyVxuuYWasHQDLbxdgsVu8OO1FQc",
-      authDomain: "int-s-72dee.firebaseapp.com",
-      projectId: "int-s-72dee",
-      storageBucket: "int-s-72dee.appspot.com",
-      messagingSenderId: "684881337775",
-      appId: "1:684881337775:web:3aff3805fe1a0f8a14e35a",
-      measurementId: "G-5ESFPJV4BJ"
+      apiKey: "AIzaSyBym678ZRXfWjzc5Us-JTMV9ljzXLgtM4I",
+      authDomain: "nbc-sa.firebaseapp.com",
+      projectId: "nbc-sa",
+      storageBucket: "nbc-sa.appspot.com",
+      messagingSenderId: "479626176899",
+      appId: "1:479626176899:web:5c5ddc73093628df63aeb6",
+      measurementId: "G-QD9WK29W17",
     };
 
+    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
+
 
     $("#save").click(async function () {
       // let image = $('#image').val()
@@ -198,23 +216,52 @@
       //   content :content,
       //   date :date
       // }
-      let data = await getDocs(collection(db, "information"));
-      console.log(data)
+      // let data = await getDocs(collection(db, "cards"));
+      // data.forEach((doc) => {
+      //   console.log(`${doc.id} => ${JSON.stringify(doc.data())}`);
+      // })
     })
+
+    let tempHtml = `<p>hello</p>`
+
+    $('#detail_page').append(tempHtml)
 
     let isModal = false
     let updateModal = $("#update_modal")
 
     $("#update").click(async function (){
-      if(!isModal){
-        isModal = true
-        updateModal.css("opacity", 1)
-        updateModal.css("pointer-events", "auto")
+      if(!$("#password").val()) {
+        alert("비밀번호를 입력해주세요")
       }else{
-        isModal = false
-        updateModal.css("opacity", 0)
-        updateModal.css("pointer-events", "none")
+        const q = query(collection(db, "cards"), where("name", "==", `${params}`));
+        try{
+          let data = await getDocs(q);
+          let pw = ""
+          data.forEach((doc) => {
+            pw = `${doc.data().password}`
+            console.log(pw)
+          })
+          if (pw !== $("#password").val()) {
+            console.log($("#password").val())
+            console.log(pw)
+            alert("비밀번호가 일치하지 않습니다")
+          } else {
+            if (!isModal) {
+              isModal = true
+              updateModal.css("opacity", 1)
+              updateModal.css("pointer-events", "auto")
+            } else {
+              isModal = false
+              updateModal.css("opacity", 0)
+              updateModal.css("pointer-events", "none")
+            }
+          }
+
+        }catch (error){
+          console.error(error)
+        }
       }
+
     })
 
     $("#save").click(async function (){
@@ -235,7 +282,7 @@
   <div>INT's</div>
 </div>
 <div class="bar"></div>
-<div class="main grid-container">
+<div class="main grid-container" id="detail_page">
   <div class="card mb-3 detail" >
     <div class="row g-0">
       <div class="col-md-4">
@@ -258,6 +305,7 @@
                                         target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
           <hr>
           <div class="update">
+            <input type="password" placeholder="비밀번호를 입력해주세요" id="password">
             <button type="button" class="btn btn-danger" id="update">수정하기</button>
           </div>
         </div>
@@ -269,7 +317,7 @@
       <div class="col-md-8">
         <div class="card-body update-modal-content">
           <hr>
-            <h1 class="card-text">이름 : <input type="text" placeholder="변경 전 이름"/></h1>
+          <h3 class="card-text">이름 : <input type="text" placeholder="변경 전 이름"/></h3>
           <hr>
           <h5 class="card-text"> MBTI : <input type="text" placeholder="변경 전 MBTI"></h5>
           <hr>
@@ -277,7 +325,7 @@
           <hr>
           <p class="card-text">자신의 스타일 : <input type="text" placeholder="스타일"></p>
           <hr>
-          <p class="card-text">블로그 : <input type="text" placeholder="블로그 주소"></p>
+          <p class="card-text">블로그 : <input type="text" placeholder="스타일"></p>
           <hr>
           <p class="card-text">이미지 : <input type="text" placeholder="이미지 주소"></p>
           <hr>
@@ -340,3 +388,4 @@
 </body>
 
 </html>
+
